Add typecheck and biome scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc",
+    "biome": "biome check --write"
   },
   "dependencies": {
     "@geoman-io/maplibre-geoman-free": "0.2.27",
